--- a/BILD/app/src/main/AndroidManifest.xml
+++ b/BILD/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
             android:name=".Register"
             android:label="@string/title_activity_register" >
         </activity>
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.rijofaith.bild.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
