--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -2,18 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rijofaith.app" >
 
+    <uses-sdk android:minSdkVersion="11"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +24,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="com.rijofaith.App.MainActivity" />
 
@@ -33,7 +34,8 @@
         <activity
             android:name=".Cohorts"
             android:label="@string/title_activity_cohorts"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rijofaith.app.MainActivity" />
@@ -41,7 +43,8 @@
         <activity
             android:name=".Trainees"
             android:label="@string/title_activity_trainees"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rijofaith.app.MainActivity" />
@@ -49,7 +52,8 @@
         <activity
             android:name=".DataEntryStatus"
             android:label="@string/title_activity_data_entry_status"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rijofaith.app.MainActivity" />
@@ -57,15 +61,17 @@
         <activity
             android:name=".TrainingStatus"
             android:label="@string/title_activity_training_status"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rijofaith.app.MainActivity" />
         </activity>
         <activity
-            android:name=".EnterEditTraineesDetails"
+            android:name=".EnterTraineesDetails"
             android:label="@string/title_activity_enter_edit_trainees_details"
-            android:parentActivityName=".Trainees" >
+            android:parentActivityName=".Trainees"
+            android:configChanges="orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rijofaith.app.Trainees" />
@@ -73,7 +79,8 @@
         <activity
             android:name=".TraineesList"
             android:label="@string/title_activity_trainees_list"
-            android:parentActivityName=".Trainees" >
+            android:parentActivityName=".Trainees"
+            android:configChanges="orientation|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rijofaith.app.Trainees" />
