--- a/App/local.properties
+++ b/App/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 09 14:39:24 IST 2015
-sdk.dir=C\:\\Users\\Sajo Sunny\\AppData\\Local\\Android\\sdk
+#Mon Oct 12 10:23:51 IST 2015
+sdk.dir=/home/rijo/Android/Sdk
